css: fix alignment of clone URL panel
It hangs off the edge for me. I'm not totally sure why, but removing the
hard-coded 350px width fixes it on my box at least.

--- a/public/less/_repository.less
+++ b/public/less/_repository.less
@@ -149,8 +149,6 @@
     }
 
     #clone-panel {
-        width: 350px;
-
         input {
             border-radius: 0;
             padding: 5px 10px;
